public/styles/styles.css
/* ... */
  .reg-login {
    position: relative;
    left: 0;
    right: 0;
    top: 0;
    display: flex;
    flex-direction: column;
    width: 60%;
    text-align: center;
    margin: 0 auto;
  }

  .comment-user {
    color: #3a4374;
    font-size: 13px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: -0.181px;
    width: fit-content;
  }

  .comment-username {
    color: #647196;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
  }

  .comment-content {
    color: #647196;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    display: flex;
    flex-wrap: wrap;
    line-height: normal;
    margin-top: 20px;
  }

  .comment-username {
    height: 10px;
  }

  .delete-form {
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .feedback-suggested-title {
    position: relative;
    top: 0;
    margin-top: 0;
    bottom: 40px;
    color: #3a4374;
    font-size: 13px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: -0.181px;
    left: 0px;
  }

  .new-feedback-form {
    left: 0;
    top: 64px;
    right: 0;
    background-color: #ffff;
    margin-top: 0;
    height: 100%;
    border-radius: 10px;
    padding: 0;
    margin: 0;
    width: 100vw;
  }

  .new-feedback-icon {
    position: absolute;
    top: -18px;
    left: 31px;
    bottom: 0px;
  }

  .feeback-title-para {
    font-size: 13px !important;
    margin-left: 0px;
  }

  .feedback-navlink {
    text-decoration: none;
    margin: 0px 2px 4px 2px;
    width: 46%;
  }

  .feedback-navlink-show {
    position: relative;
    cursor: pointer;
    text-decoration: none;
    margin: 0;
    flex-shrink: 0;
    width:46%;
  }

  .reply-link {
    margin-left: 85%;
    z-index: 999;
  }

  .reply-reply-link {
    right: 6%;
  }

  .btn-suggestion {
    width: auto;
    margin-bottom: 13px;
    margin-left: 0px;
    font-size: 13px !important;
  }

  .comment-icon {
    display: flex;
    position: relative;
    flex-direction: row;
    background-color: #f2f4fe;
    right: 0px;
    left: 7% !important;
    top: 72px;
    width: 32px;
    height: 19px;
    gap: 4px;
  } */

  .comment-num {
    font-size: 13px;
  }

  .suggest {
    display: inline-flex;
    justify-content: center;
    gap: 8px;
  }

  .suggestion {
    display: none;
    align-items: center;
    font-size: 13px;
  }

  .arrows {
    display: none;
  }

  .nav-link {
    position: relative;
    left: -14px;
    display: inline-flex;
    justify-content: center;
    margin-left: 0;
    gap: 8px;
    color: #f2f4fe;
    text-align: right;
    font-size: 13px;
    font-family: Jost;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
  }

  .menu-item {
    font-size: 13px;
  }

  .dropped {
    display: none;
  }

  .drop {
    background-color: #fff;
    width: 50vw;
    display: flex;
    flex-direction: column;
    float: right;
    right: 0;
    top: 121px;
    position: absolute;
    z-index: 3;
  }

  .feedback-suggested-para {
    position: relative;
    width: 100%;
    flex-wrap: nowrap;
    left: 0;
    color: #647196;
    margin-left: 10px;
    font-size: 13px;
    font-weight: 400;
    line-height: normal;
    margin-left: 0;
  }

  .container-fluid {
    padding-left: 0 !important;
    padding-right: 0;
    z-index: 2;
  }

  .dropdown-menu.show {
    display: block;
    width: 172px;
    height: auto;
    left: 0px !important;
    top: 0px !important;
  }


  figcaption {
    position: relative;
    left: 0;
    right: 0;
    top: 0;
    color: #3a4374;
    text-align: center;
    font-style: normal;
    margin: 0 auto;
  }

  .feedback-title {
    position: relative;
    left: 0;
    right: 0;
    top: 0;

    color: #3a4374;
    text-align: center;
    font-family: Jost;
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    margin: 0 auto;
    line-height: normal;
    letter-spacing: -0.25px;
  }

  .got-suggestion {
    position: relative;
    margin-bottom: 24px !important;
    color: #647196;
    text-align: center;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    right: 0;
    left: 0;
    top: 3px;
    width: 278px;
    margin: 0 auto;
  }

  .no-feedback {
    position: relative;
    left: 0;
    right: 0;
    top: 0;
    align-content: center;
    width: 102px;
    height: 108px;
    margin: 0 auto;
  }

  .figure-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 825px;
    height: 600px;
    flex-shrink: 0;
  }



  .add-feedback {
    margin-left: 0px;
    margin-top: 0px;
  }

  .got-suggestion {
    margin-bottom: 24px !important;
    color: #647196;
    text-align: center;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
  }

  .login-screen,
  .register-screen {
    position: relative;
    left: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100vw;
    margin: 0 auto;
    height: auto;
  }

  .feeback-title {
    color: #3a4374;
    text-align: center;
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: -0.25px;
  }

  .roadmap-nav {
    width: 100vw !important;
    height: 100px;
    flex-shrink: 0;
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
    border-radius: 0;
  }

  .go-back-roadmap {
    margin-top: 0;
    margin-left: 0;

    margin-bottom: 0px;
    top: 0;
    left: 0;
    right: 0;
  }

  .row-roadmap {
    width: 327px;
    margin-left: 24px;
  }

  .column {
    display: flex;
    flex-direction: column;
    margin-right: 24px;
  }
/* ... */

